# rust-pool

./: Cargo.toml  README.md
src/: main.rs  mod.rs  resume_exercices.rs
src/exercices/: mod.rs
src/exercices/_01_variables/: README.md  variables1.rs  variables2.rs  variables4.rs
src/exercices/_02_conditions/: README.md  condition1.rs  condition2.rs
src/exercices/_03_functions/: function1.rs
src/exercices/_07_pattern_matching/: pattern_matching2.rs
src/exercices/box_pointers_04/: cons_list.rs
src/exercices/day2/_10_structs/: struct1.rs
src/exercices/day3/: mod.rs
src/exercices/day3/_11_traits/: trait1.rs
src/exercices/day5/_19_rc_pointers/: rc_shared_data.rs
src/exercices/error_handling_02/: option1.rs  option2.rs  option3.rs  result1.rs  result2.rs  result3.rs  user_option.rs
src/exercices/fn_pointers_05/: fnmut.rs
src/exercices/hashmaps_03/: hashmap1.rs  hashmap2.rs
src/exercices/loops_01/: loop1.rs  loop2.rs  loop3.rs  loop4.rs  loop5.rs
src/exercices/mutex_pointers_06/: mutex.rs
src/exercices/rc_pointers_07/: rc_shared_data.rs
src/exercices/refcell_pointer_08/: refcell.rs
src/solutions/: main.rs  resume_solution.rs
src/solutions/day5/_19_rc_pointers/: rc_shared_data.rs
src/solutions/traits/: trait1.rs  trait2.rs
